--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -2985,6 +2985,19 @@ msgstr "Ficheros"
 msgid "description"
 msgstr "Descripción"
 
+msgid "release"
+msgstr "Release"
+
+msgid "description"
+msgstr "Descripción"
+
+msgid "fields added"
+msgstr "Campos añadidos"
+
+msgid "fields modified"
+msgstr "Campos modificados"
+
+
 
 
 
