topic forms, loading mask, guid designer form management

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3021,19 +3021,5 @@ msgstr "Campos añadidos"
 msgid "fields modified"
 msgstr "Campos modificados"
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
->>>>>>> fc89982e2938a9c1344033305047d08e8f4caf74
+msgid "views"
+msgstr "vistas"
