--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -483,6 +483,9 @@ msgstr "Promover a %1"
 msgid "Demote from %1"
 msgstr "Devolver de %1"
 
+msgid "Position"
+msgstr "Posición"
+
 msgid "Development"
 msgstr "Desarrollo"
 
