topic jobs working!

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3137,3 +3137,9 @@ msgstr "Despliegue de Ficheros"
 
 msgid "Mapping Order"
 msgstr "Orden de Mapeo"
+
+msgid "Cannot promote/demote changeset %1 to baseline %2 (job type %3)"
+msgstr "No es posible promover/devolver el cambio %1 al entorno %2 (tipo de pase: %3)"
+
+msgid "Job element '%1' is in an active job: %2"
+msgstr "Item de pase '%1' está en un pase activo: %2"
