--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3137,3 +3137,440 @@ msgstr "Despliegue de Ficheros"
 
 msgid "Mapping Order"
 msgstr "Orden de Mapeo"
+
+# lib/Baseliner/Utils.pm (475)
+msgid "Could not open template file %1"
+msgstr "No se ha podido abrir el fichero de plantilla %1"
+
+# lib/Baseliner/Utils.pm (480)
+msgid "Error loading template '%1': '%2'"
+msgstr "Error cargando plantilla '%1': '%2'"
+
+# lib/Baseliner/Utils.pm (543)
+msgid "Missing parameter %1"
+msgstr "Falta parámetro %1"
+
+# lib/Baseliner/Utils.pm (719)
+msgid "Could not open file %1: %2"
+msgstr "No se ha podido abrir el fichero %1: %2"
+
+# lib/Baseliner/Utils.pm (888)
+msgid "Unresolved vars: '%1' in %2"
+msgstr "Vars no resueltas: '%1' in %2"
+
+# lib/BaselinerX/LcController.pm (601)
+msgid "Favorite added ok"
+msgstr "Favorito añadido correctamente"
+
+# lib/BaselinerX/LcController.pm (615)
+msgid "Favorite removed ok"
+msgstr "Favorito eliminado correctamente"
+
+# lib/BaselinerX/Project.pm (25)
+msgid "Baseliner Project"
+msgstr "Proyecto Baseliner"
+
+# lib/BaselinerX/Project.pm (29)
+msgid "Baseliner Projects"
+msgstr "Proyectos Baseliner"
+
+# root/ci/ftp_agent.js (5)
+msgid "Server"
+msgstr "Servidor"
+
+# root/ci/ftp_agent.js (17)
+msgid "Password"
+msgstr "Contraseña"
+
+# root/ci/oracle_connection.js (17)
+msgid "SID"
+msgstr "SID"
+
+# root/ci/ssh_agent.js (20)
+msgid "Private Key"
+msgstr "Clave privada"
+
+# root/ci/ssh_dest.js (5)
+msgid "SSH Server"
+msgstr "Servidor SSH"
+
+# root/ci/ssh_script.js (5)
+msgid "SSH Destination"
+msgstr "Destino SSH"
+
+# root/ci/ssh_script.js (16)
+msgid "Script"
+msgstr "Script"
+
+# root/ci/windows_server.js (5)
+msgid "Domain"
+msgstr "Dominio"
+
+# root/ci/windows_server.js (6)
+msgid "NetBIOS Name"
+msgstr "Nombre NetBIOS"
+
+# root/comp/catalog_grid.js (144)
+msgid "YAML"
+msgstr "YAML"
+
+# root/comp/catalog_grid.js (242)
+msgid "Grouping"
+msgstr "Agrupación"
+
+# root/comp/catalog_grid.js (253)
+msgid "ID"
+msgstr "ID"
+
+# root/comp/catalog_grid.js (255)
+msgid "Package"
+msgstr "Paquete"
+
+# root/comp/chain_edit.mas (254)
+msgid "Switch"
+msgstr "Switch"
+
+# root/comp/chain_grid.js (463)
+msgid "Chains"
+msgstr "Cadenas"
+
+# root/comp/chain_grid.js (479)
+msgid "Servicio"
+msgstr "Servicio"
+
+# root/comp/chain_grid.mas (97)
+msgid "OK"
+msgstr "OK"
+
+# root/comp/chain_grid.mas (109)
+msgid "Saved"
+msgstr "Guardado"
+
+# root/comp/chain_grid.mas (129)
+msgid "New Chain"
+msgstr "Nueva cadena"
+
+# root/comp/chain_grid.mas (221)
+msgid "No rows selected"
+msgstr "Ninguna fila seleccionada"
+
+# root/comp/ci-grid.js (78)
+msgid "CI: %1"
+msgstr "IC: %1"
+
+# root/comp/ci-grid.js (97)
+msgid "Item"
+msgstr "Item"
+
+# root/comp/ci-grid.js (98)
+msgid "Collection"
+msgstr "Colección"
+
+# root/comp/ci-grid.js (100)
+msgid "Class"
+msgstr "Clase"
+
+# root/comp/ci-grid.js (104)
+msgid "Properties"
+msgstr "Propiedades"
+
+# root/comp/ci-gridtree.js (97)
+msgid "CI"
+msgstr "IC"
+
+# root/comp/ci-gridtree.js (174)
+msgid "CI Class: %1"
+msgstr "Clase IC: %1"
+
+# root/comp/ci-gridtree.js (210)
+msgid "Class"
+msgstr "Clase"
+
+# root/comp/ci-viewer.js (20)
+msgid "New %1"
+msgstr "Nuevo %1"
+
+# root/comp/daemon_grid.js (271)
+msgid "Config"
+msgstr "Configuración"
+
+# root/comp/daemon_grid.js (273)
+msgid "Running"
+msgstr "Ejecutando"
+
+# root/comp/daemon_grid.js (274)
+msgid "Last Process ID"
+msgstr "Último ID de proceso"
+
+# root/comp/dashboard.html (23)
+msgid "<%$entorno->{bl}%> - <%$entorno->{totOk}%>/<%$entorno->{total}%> OK"
+msgstr "<%$entorno->{bl}%> - <%$entorno->{totOk}%>/<%$entorno->{total}%> OK"
+
+# root/comp/dashboard.html (26)
+msgid "<%$entorno->{bl}%> - <%$entorno->{totError}%>/<%$entorno->{total}%> ERROR"
+msgstr "<%$entorno->{bl}%> - <%$entorno->{totError}%>/<%$entorno->{total}%> ERROR"
+
+# root/comp/dashboard.html (95)
+msgid "Log <%$lastjob->{name}%>"
+msgstr "Log <%$lastjob->{name}%>"
+
+# root/comp/dashboard.html (175)
+msgid "Log <%$job->{nameOk}%>"
+msgstr "Log <%$job->{nameOk}%>"
+
+# root/comp/dashboard.html (181)
+msgid "Log <%$job->{nameError}%>"
+msgstr "Log <%$job->{nameError}%>"
+
+# root/comp/dashboard_job.html (17)
+msgid "Log details <%$namejob%>"
+msgstr "Log detallado <%$namejob%>"
+
+# root/comp/dashboard_job.html (93)
+msgid "Log <%$service->{service}%>"
+msgstr "Log <%$service->{service}%>"
+
+# root/comp/dashboard_job.html (250)
+msgid "Elementos <%$namejob%>"
+msgstr "Elementos <%$namejob%>"
+
+# root/comp/feature_grid.mas (74)
+msgid "New Feature"
+msgstr "Nueva característica"
+
+# root/comp/jes_viewer.mas (62)
+msgid "Previous"
+msgstr "Anterior"
+
+# root/comp/jes_viewer.mas (69)
+msgid "Next"
+msgstr "Siguiente"
+
+# root/comp/jes_viewer.mas (103)
+msgid "JES Files"
+msgstr "Ficheros JES"
+
+# root/comp/jes_viewer.mas (159)
+msgid "JES Spool"
+msgstr "Spool JES"
+
+# root/comp/job_calendar_comp.mas (34)
+msgid "Ayuda"
+msgstr "Ayuda"
+
+# root/comp/job_calendar_edit.mas (104)
+msgid "Normal"
+msgstr "Normal"
+
+# root/comp/job_calendar_grid.mas (282)
+msgid "Previsualizar"
+msgstr "Previsualizar"
+
+# root/comp/job_calendar_grid.mas (310)
+msgid "Previsualizar Calendario"
+msgstr "Previsualizar Calendario"
+
+# root/comp/job_logfile.js (16)
+msgid "Logfile Open Error"
+msgstr "Error al abrir fichero de log"
+
+# root/comp/job_new.mas (217)
+msgid "Franja horaria"
+msgstr "Franja horaria"
+
+# root/comp/job_new.mas (376)
+msgid "Hora de pase Caducada"
+msgstr "Hora de pase Caducada"
+
+# root/comp/job_new.mas (377)
+msgid "Hora de pase Caducada"
+msgstr "Hora de pase Caducada"
+
+# root/comp/job_new.mas (391)
+msgid "Time off range %1"
+msgstr "Hora fuera de rango %1"
+
+# root/comp/job_new.mas (392)
+msgid "Pase fuera de ventana. Seleccione Ventana personalizada si quiere un pase fuera de las ventanas permitidas"
+msgstr "Pase fuera de ventana. Seleccione Ventana personalizada si quiere un pase fuera de las ventanas permitidas"
+
+# root/comp/job_new.mas (600)
+msgid "Not promotable to %1"
+msgstr "No promocionable a %1"
+
+# root/comp/job_stash.js (12)
+msgid "Stash Log"
+msgstr "Stash Log"
+
+# root/comp/log.html (74)
+msgid "Sort"
+msgstr "Ordenar"
+
+# root/comp/log.html (76)
+msgid "Chronological"
+msgstr "Cronológico"
+
+# root/comp/log.html (78)
+msgid "Reverse"
+msgstr "Inverso"
+
+# root/comp/log.html (82)
+msgid "No Data"
+msgstr "No hay datos"
+
+# root/comp/log.html (84)
+msgid "View Data"
+msgstr "Ver datos"
+
+# root/comp/log.html (122)
+msgid "view"
+msgstr "ver"
+
+# root/comp/log_grid.mas (202)
+msgid "Form Error"
+msgstr "Error de formulario"
+
+# root/comp/log_grid.mas (215)
+msgid "Severity"
+msgstr "Severidad"
+
+# root/comp/log_grid.mas (349)
+msgid "Do you wish to resume job %1"
+msgstr "Seguro que quiere reiniciar el job %1"
+
+# root/comp/log_grid.mas (369)
+msgid "Delete Log"
+msgstr "Borrar log"
+
+# lib/BaselinerX/Service/ChangesetServices.pm (11)
+msgid "Checkout files of a changeset"
+msgstr "Checkout de ficheros de un cambio"
+
+# lib/BaselinerX/Service/ChangesetServices.pm (16)
+msgid "Fill job_elements"
+msgstr "Rellenado de job_elements"
+
+# lib/BaselinerX/Service/ChangesetServices.pm (46)
+msgid "Changeset checkout: failed to write to file %1: %2"
+msgstr "Changeset checkout: fallo al escribir el fichero %1: %2"
+
+# lib/BaselinerX/Service/ChangesetServices.pm (51)
+msgid "Checked out files"
+msgstr "Ficheros descargados"
+
+# lib/BaselinerX/Service/ChangesetServices.pm (93)
+msgid "Elements included in job"
+msgstr "Elementos del job"
+
+# lib/BaselinerX/Service/ChangesetServices.pm (128)
+msgid "%1 %2 to %3"
+msgstr "%1 %2 a %3"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (56)
+msgid "Deployments detected"
+msgstr "Despliegues detectados"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (61)
+msgid "Deployment files for group %1"
+msgstr "Ficheros a desplegar del grupo %1"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (69)
+msgid "*resetting* deployment scripts - they were unset"
+msgstr "*Reiniciando* scripts de despliegue"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (73)
+msgid "Running deployment: %1"
+msgstr "Ejecutando despliegue: %1"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (80)
+msgid "Deployment error for %1"
+msgstr "Error en el despliegue %1"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (81)
+msgid "Error during deployment %1"
+msgstr "Errores durante el despliegue %1"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (84)
+msgid "Deployment ok for *%1* - %2"
+msgstr "Despliegue correcto para *%1* - %2"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (90)
+msgid "Deployed %1 files/dirs to `%2`"
+msgstr "Desplegados %1 ficheros/directorios a `%2`"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (112)
+msgid "Deployments Scripts detected"
+msgstr "Scripts de despliegue detectados"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (116)
+msgid "Deployment scripts for group *%1*"
+msgstr "Scripts de despliegue para el grupo *%1*"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (124)
+msgid "Error loading module %1"
+msgstr "Error al cargar el módulo %1"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (128)
+msgid "Running Deployment script %1..."
+msgstr "Ejecutando script de despliegue %1..."
+
+# lib/BaselinerX/Service/DeployFromStash.pm (132)
+msgid "Deployment script error for %1"
+msgstr "Error en el script de despliegue para %1"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (133)
+msgid "Error durante el script de despliegue %1"
+msgstr "Error during deployment script %1"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (135)
+msgid "Deployment scripts ok for *%1*"
+msgstr "Script de despliegue correcto para *%1*"
+
+# lib/BaselinerX/Service/DeployFromStash.pm (140)
+msgid "Finished running %1 scripts"
+msgstr "Finalizada la ejecución de %1 scripts"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (62)
+msgid "Item Deploy Mappings"
+msgstr "Mapeos de despliegue de items"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (107)
+msgid "Invalid job_root %1"
+msgstr "Root del job inválido %1"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (115)
+msgid "Mapping name %1 not active. Ignored"
+msgstr "Nombre del mapeo %1 no está activo. Ignorado"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (119)
+msgid "Checking if mapping for bl %1 applies"
+msgstr "Comprobando si el mapeo para el bl %1 aplica"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (129)
+msgid "Checking workspace `%1` for changes `%2` ..."
+msgstr "Comprobando cambios `%2` en el espacio de trabajo `%1`"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (137)
+msgid "Checking exclusions"
+msgstr "Comprobando exclusiones"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (140)
+msgid "Excluded workspace mapping %1"
+msgstr "Mapeo de espacio de trabajo excluido %1"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (145)
+msgid "After exclusions for %1"
+msgstr "Después de las exclusiones para %1"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (161)
+msgid "*%1* Included Elements for Deployment"
+msgstr "*%1* Elementos incluidos para el despliegue"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (164)
+msgid "Mapping to `%1` has no matching workspaces in elements"
+msgstr "El mapeo a `%1` no tiene elementos coincidentes"
+
+# lib/BaselinerX/Service/ItemDeploy.pm (199)
+msgid "*Pushed deployment* for `%1`"
+msgstr "*Despliegue añadido* para `%1`"
+
