lifecycle Open…, release contents in lifecycle, category types on view

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3799,6 +3799,9 @@ msgstr "ID de Tópico"
 msgid "Topic Report"
 msgstr "Informe de Tópicos"
 
+msgid "Open..."
+msgstr "Abrir..."
+
 msgid "Code"
 msgstr "Código"
 
