--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3823,3 +3823,6 @@ msgstr "HTML Básico"
 
 msgid "%1 of %2 total rows"
 msgstr "%1 de %2 filas totales"
+
+msgid "Include into"
+msgstr "Incluido en"
