--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3839,3 +3839,6 @@ msgstr "%1 de %2 filas totales"
 
 msgid "Include into"
 msgstr "Incluido en"
+
+msgid "Delete Folder"
+msgstr "Borrar Carpeta"
