--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -931,6 +931,15 @@ msgstr "Descripción"
 msgid "Calendar Name"
 msgstr "Nombre del Calendario"
 
+msgid "Manage"
+msgstr "Gestionar"
+
+msgid "Flat View"
+msgstr "Vista Plana"
+
+msgid "(all projects)"
+msgstr "(todas)"
+
 msgid "All"
 msgstr "Todos"
 
