--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -165,8 +165,8 @@ msgstr "Despliegue de Ficheros"
 msgid "no calendar window"
 msgstr "fuera de ventana"
 
-msgid "Loading available time..."
-msgstr "Actualizando horario..."
+msgid "Loading available time for %1..."
+msgstr "Actualizando horario para el %1..."
 
 msgid "no calendar windows available for selected date"
 msgstr "no hay ventana de pase disponible para la fecha seleccionada"
@@ -188,6 +188,24 @@ msgstr "Falta el usuario y/o contraseña"
 
 msgid "User doesn't have permissions to create a job in any environment"
 msgstr "Su usuario no tiene permisos de creacion de pases en ningun entorno"
+
+msgid "Cannot submit. The form has errors."
+msgstr "No se puede dar de alta el pase: el formulario contiene errores."
+
+msgid "Job not in a window"
+msgstr "Pase fuera de ventana"
+
+msgid "Urgent Job"
+msgstr "Pase Urgente"
+
+msgid "Form Error"
+msgstr "Error en el Formulario"
+
+msgid "Unknown Error"
+msgstr "Error Desconocido"
+
+msgid "Connection Error"
+msgstr "Error de Conexión"
 
 msgid "What"
 msgstr "Qué"
