--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -6,8 +6,23 @@ msgstr ""
 msgid "Progress"
 msgstr "Avance"
 
+msgid "All-f"
+msgstr "Todas"
+
 msgid "progress"
 msgstr "Avance"
+
+msgid "Type: %1"
+msgstr "Tipo: %1"
+
+msgid "End time is equal or earlier than the start time ( %1 <= %2 )"
+msgstr "La hora fin es igual o anterior a la hora inicio ( %1 <= %2 )"
+
+msgid "Baseline: %1"
+msgstr "Entorno: %1"
+
+msgid "Natures: %1"
+msgstr "Naturalezas: %1"
 
 msgid "Advanced"
 msgstr "Avanzado"
@@ -23,6 +38,15 @@ msgstr "Ver Stash"
 
 msgid "Inbox"
 msgstr "Buzón"
+
+msgid "Copy"
+msgstr "Copiar"
+
+msgid "Cut"
+msgstr "Cortar"
+
+msgid "Paste"
+msgstr "Pegar"
 
 msgid "Empty"
 msgstr "Vacío"
