--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -12,6 +12,9 @@ msgstr "Todas"
 msgid "progress"
 msgstr "Avance"
 
+msgid "Start: %1"
+msgstr "Inicio: %1"
+
 msgid "Type: %1"
 msgstr "Tipo: %1"
 
