registro de eventos de modificacion topicos

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3995,4 +3995,8 @@ msgstr "Personalizar campo"
 msgid "Field"
 msgstr "Campo"
 
+msgid "%1 modified topic %2 from %3 to %4 on %5"
+msgstr "%1 modificó el campo %2  de %3 a %4 on %5"
+
+
 
