--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4031,6 +4031,12 @@ msgstr "proyectos adjuntos"
 msgid "attached users"
 msgstr "usuarios adjuntos"
 
+msgid "%1 changed topic status from %2 to %3 on %4"
+msgstr "%1 modificó el estado de %2 a %3 el %4"
+
+
+
+
 
 
 
