id_project in job_items

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -9,6 +9,9 @@ msgstr "Abrir"
 msgid "Progress"
 msgstr "Avance"
 
+msgid "Job Slots"
+msgstr "Ventanas de Pase"
+
 msgid "Repositories"
 msgstr "Repositorios"
 
