--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3,8 +3,17 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+msgid "To Open"
+msgstr "Abrir"
+
 msgid "Progress"
 msgstr "Avance"
+
+msgid "Job Slots"
+msgstr "Ventanas de Pase"
+
+msgid "Repositories"
+msgstr "Repositorios"
 
 msgid "All-f"
 msgstr "Todas"
@@ -12,8 +21,23 @@ msgstr "Todas"
 msgid "progress"
 msgstr "Avance"
 
+msgid "Start: %1"
+msgstr "Inicio: %1"
+
+msgid "Edit: %1"
+msgstr "Editar: %1"
+
 msgid "Type: %1"
 msgstr "Tipo: %1"
+
+msgid "Error during DSL Execution: %1"
+msgstr "Error durante la ejecución DSL: %1"
+
+msgid "Error building DSL for rule '%1' (%2): %3"
+msgstr "Error preparando DSL para la regla '%1' (%2): %3"
+
+msgid "Error running rule '%1' (%2): %3"
+msgstr "Error ejecutando regla '%1' (%2): %3"
 
 msgid "End time is equal or earlier than the start time ( %1 <= %2 )"
 msgstr "La hora fin es igual o anterior a la hora inicio ( %1 <= %2 )"
@@ -27,8 +51,20 @@ msgstr "Entorno: %1"
 msgid "Natures: %1"
 msgstr "Naturalezas: %1"
 
+msgid "Missing rule name"
+msgstr "Rellene el nombre de la regla"
+
+msgid "No events selected"
+msgstr "No se han seleccionado eventos"
+
 msgid "Advanced"
 msgstr "Avanzado"
+
+msgid "Event"
+msgstr "Evento"
+
+msgid "Events"
+msgstr "Eventos"
 
 msgid "View Stash"
 msgstr "Ver Stash"
@@ -41,6 +77,12 @@ msgstr "Ver Stash"
 
 msgid "Inbox"
 msgstr "Buzón"
+
+msgid "User is not active"
+msgstr "El usuario no está activo"
+
+msgid "Filters"
+msgstr "Filtros"
 
 msgid "Copy"
 msgstr "Copiar"
@@ -1357,6 +1399,12 @@ msgstr "Promoción"
 msgid "demote"
 msgstr "Marcha Atrás"
 
+msgid "Backout"
+msgstr "Marcha Atrás"
+
+msgid "Rollback"
+msgstr "Rollback"
+
 msgid "rollback"
 msgstr "Rollback"
 
@@ -1666,6 +1714,9 @@ msgstr "%1 minutos"
 
 msgid "Refresh"
 msgstr "Refresco"
+
+msgid "Refresh: %1s"
+msgstr "Refresco: %1s"
 
 msgid "Enabled"
 msgstr "Habilitado"
@@ -3967,6 +4018,66 @@ msgstr "Carpeta creada"
 
 msgid "Error adding folder: %1"
 msgstr "Error creando carpeta: %1"
+
+msgid "You must save the topic before add new files"
+msgstr "Debes guardar el tópico antes de añadir nuevos ficheros"
+
+msgid "status_new"
+msgstr "Estados"
+
+msgid "users"
+msgstr "Usuarios"
+
+msgid "Custom field"
+msgstr "Personalizar campo"
+
+msgid "Field"
+msgstr "Campo"
+
+msgid "%1 modified topic %2 from %3 to %4 on %6"
+msgstr "%1 modificó el campo %2  de %3 a %4 el %6"
+
+msgid "%1 modified topic on %2"
+msgstr "%1 modificó el tópico el %2"
+
+msgid "%1 deleted all attached topics"
+msgstr "%1 borró todos los tópicos adjuntos"
+
+msgid "%1 modified topic: %2 ( %4 ) on %6"
+msgstr "%1 modificó el tópico: %2 ( %4 ) el %6"
+
+msgid "attached topics"
+msgstr "tópicos adjuntos"
+
+msgid "%1 deleted release %3"
+msgstr "%1 borró release %3"
+
+msgid "%1 modified topic: changed release to %4"
+msgstr "%1 modificó tópico: release cambió a %4"
+
+msgid "%1 deleted all revisions"
+msgstr "%1 borró todas las revisiones"
+
+msgid "attached revisions"
+msgstr "revisiones adjuntos"
+
+msgid "%1 deleted all projects"
+msgstr "%1 borró todos los proyectos"
+
+msgid "attached projects"
+msgstr "proyectos adjuntos"
+
+msgid "attached users"
+msgstr "usuarios adjuntos"
+
+msgid "%1 changed topic status from %2 to %3 on %4"
+msgstr "%1 modificó el estado de %2 a %3 el %4"
+
+
+
+
+
+
 
 
 
