--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4127,6 +4127,9 @@ msgstr "Campo de texto"
 msgid "Upload files"
 msgstr "Subir ficheros"
 
+msgid "Progress bar"
+msgstr "Barra de progreso"
+
 
 
 
