cambio para que el evento de creacion sea mas descriptivo

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4133,6 +4133,10 @@ msgstr "Barra de progreso"
 msgid "Listbox"
 msgstr "Lista de datos"
 
+msgid "%1 created a topic of %2 on %3"
+msgstr "%1 creó un tópico de categoría: %2 el %3"
+
+
 
 
 
