--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -33,6 +33,9 @@ msgstr "Subir avatar"
 msgid "Manage your Avatar"
 msgstr "Gestión de Avatar"
 
+msgid "Attribute"
+msgstr "Atributo"
+
 msgid "deactivated"
 msgstr "desactivada"
 
