--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4148,6 +4148,12 @@ msgstr "Usuario duplicado"
 msgid "Error duplicating user"
 msgstr "Error duplicando usuario"
 
+msgid "Category duplicated"
+msgstr "Categoría duplicada"
+
+msgid "Error duplicating category"
+msgstr "Error duplicando categoría"
+
 
 
 
