nueva propiedad para el campo de proyectos: valores unicos

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4155,7 +4155,14 @@ msgid "Error duplicating category"
 msgstr "Error duplicando categoría"
 
 
+msgid "Values"
+msgstr "Valores"
 
+msgid "Single"
+msgstr "Único"
+
+msgid "Multiple"
+msgstr "Múltiple"
 
 
 
