has_description for CIs, user prefs and api_key login
SQL:
alter table bali_user add  (  api_key varchar2(4000) )

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -24,6 +24,9 @@ msgstr "por %1"
 msgid "All-f"
 msgstr "Todas"
 
+msgid "Change password"
+msgstr "Cambiar contraseña"
+
 msgid "Current avatar"
 msgstr "Avatar actual"
 
