nuevo dashlet topicos abiertos por categorias

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4208,4 +4208,8 @@ msgstr "Agrupar releases"
 msgid "Content"
 msgstr "Contenido"
 
+msgid "Topics open by category"
+msgstr "Tópicos abiertos por categorías"
 
+msgid "Chart pie (Topics open by category)"
+msgstr "Gráfico circular (Tópicos abiertos por categorías)"
